--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ span {
 }
 
 .game{
-  text-align: center;
+  text-align: left;
   margin: 50px;
   border: 50px;
   height: 800px;
@@ -21,7 +21,7 @@ span {
 
 .row{
   height: 800px;
-  align-content: center;
+  align-content: left;
   vertical-align: top;
 }
 
@@ -35,9 +35,14 @@ span {
 .char{
   margin: 3px;
 }
+
+.active{
+  font-weight: bold;
+}
+
 .space{
-  height: 110px;
-  width:  40px;
+  font-size: 30px;
+  color: rgb(146, 146, 146);
 }
 
 .cipherBox{
