--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,15 @@ span {
 
 .Tile{
   text-align: center;
+  vertical-align: center;
   font-size: 40px;
   display: inline-block;
-  width: 40px;
-
+  width: 36px;
 }
 .char{
-  margin: 3px;
+  text-align: center;
+  /* margin: 5px; */
+  width: 36px;
 }
 
 .active{
@@ -41,8 +43,9 @@ span {
 }
 
 .space{
-  font-size: 30px;
+  font-size: 25px;
   color: rgb(146, 146, 146);
+  text-align: center;
 }
 
 .cipherBox{
