--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,11 @@ span {
 }
 
 .row{
-  height: 800px;
+  /* height: 300px; */
   align-content: left;
   vertical-align: top;
+  border-color: rgb(102, 101, 101);
+  margin-bottom: 50px;
 }
 
 .Tile{
@@ -54,4 +56,18 @@ span {
   font-size: 25px;
   color: rgb(146, 146, 146);
   text-align: center;
+}
+
+.btn{
+  font: 14px sans-serif;
+  border-radius: 8px;
+  border: black;
+  color: white;
+  background-color: #555555;
+  padding: 12px 18px;
+  margin: 2px;
+}
+
+.btn-hint{
+  background-color: #24ad30;
 }
