--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,22 @@ span {
   background-color: #555555;
   padding: 12px 18px;
   margin: 2px;
+  margin-bottom: 20px;
 }
 
-.btn-hint{
-  background-color: #24ad30;
+
+.hint{
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 10px;
+}
+.panel{
+  width: 200px;
+  border-color: rgb(117, 207, 117);
+}
+
+.panel-default>.panel-heading {
+  color:white;
+  background-color: rgb(100, 180, 100);
+  border-color: #ddd;
 }
